--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -14,25 +14,18 @@ jobs:
         run: |
           sudo apt update
           sudo apt install libffi-dev libheif-dev build-essential
-      - name: Checkout Codex
-        uses: actions/checkout@v2
-        with:
-          repository: shamazmazum/codex
-          path: ~/lisp/codex
-      - name: Checkout docparser
-        uses: actions/checkout@v2
-        with:
-          repository: shamazmazum/docparser
-          path: ~/lisp/docparser
       - name: Install roswell
         run: |
           curl -L https://raw.githubusercontent.com/roswell/roswell/master/scripts/install-for-ci.sh | sh
-      - name: Install Ultralisp
+      - name: Install qlot
         run: |
-          ros -e '(ql-dist:install-dist "http://dist.ultralisp.org/" :prompt nil)'
+          ros install qlot
+      - name: Set Path
+        run: |
+          echo "${HOME}/.roswell/bin" >> $GITHUB_PATH
       - name: Build documentation
         run: |
-          ros -s codex -e '(codex:document :cl-libheif :skip-undocumented t)'
+          qlot exec ros -s codex -e '(codex:document :cl-libheif :skip-undocumented t)'
       - name: Deploy to GH pages
         uses: peaceiris/actions-gh-pages@v3
         with:
